[gd_scene load_steps=7 format=2]

[ext_resource path="res://Background/sky.png" type="Texture" id=1]
[ext_resource path="res://Background/pine2.png" type="Texture" id=2]
[ext_resource path="res://resumemenue.gd" type="Script" id=3]
[ext_resource path="res://Sounds/actionMusic.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/soundIcon.png" type="Texture" id=5]
[ext_resource path="res://UI/soundIcon-Mute.png" type="Texture" id=6]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
anchor_right = 1.001
anchor_bottom = 1.0
margin_top = 15.0
margin_right = -0.688049
margin_bottom = 3.0
texture = ExtResource( 2 )

[node name="resume" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = 41.0
margin_right = 31.5
margin_bottom = 61.0
text = "RESUME"

[node name="restart" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -24.0
margin_right = 36.0
margin_bottom = -4.0
text = "RESTART"

[node name="exit" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = 17.0
margin_right = 23.0
margin_bottom = 37.0
text = "EXIT"

[node name="mainmenue" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = 50.0
margin_right = 32.0
margin_bottom = 70.0
text = "MENUE"

[node name="TextureButton" type="TextureButton" parent="TextureRect/TextureRect2"]
anchor_left = 0.901
anchor_top = -0.035
anchor_right = 0.901
anchor_bottom = -0.035
margin_left = 0.112
margin_top = -0.0349998
margin_right = 256.112
margin_bottom = 255.965
rect_scale = Vector2( 0.160016, 0.228117 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="TextureRect/TextureRect2/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/mainmenue" to="." method="_on_mainmenue_pressed"]
[connection signal="toggled" from="TextureRect/TextureRect2/TextureButton" to="." method="_on_TextureButton_toggled"]
